<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/darken_bg"
        android:orientation="vertical"
        android:padding="16dp">

        <Space
            android:layout_width="match_parent"
            android:layout_height="24dp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/imageView1"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="0.5"
                android:adjustViewBounds="true"
                android:src="@drawable/logoprojnew"
                tools:ignore="ContentDescription,HardcodedText,ImageContrastCheck"
                android:contentDescription="TODO" />

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:fontFamily="sans-serif-medium"
                android:text="
            Scan-N-Park"
                android:textAlignment="center"
                android:textColor="#800000"
                android:textSize="30sp"
                android:textStyle="bold|italic"
                tools:ignore="HardcodedText,TextContrastCheck,TextSizeCheck" />

            <ImageView
                android:id="@+id/imageView2"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="0.5"
                android:adjustViewBounds="true"
                android:src="@drawable/ctulogonobg"
                tools:ignore="ContentDescription,ImageContrastCheck" />
        </LinearLayout>

        <View
            android:layout_width="wrap_content"
            android:layout_height="6dp"
            android:layout_gravity="center"
            android:layout_marginTop="20dp"
            android:background="@drawable/rounded_maroon_line" />

        <Space
            android:layout_width="match_parent"
            android:layout_height="32dp" />

        <EditText
            android:id="@+id/usernameEditText"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:hint="@string/username_license_no"
            android:background="@drawable/round_white"
            android:inputType="text"
            android:paddingStart="8dp"
            android:paddingEnd="8dp"
            android:autofillHints="username" />

        <Space
            android:layout_width="match_parent"
            android:layout_height="16dp" />

        <EditText
            android:id="@+id/passwordEditText"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:hint="@string/password"
            android:background="@drawable/round_white"
            android:inputType="textPassword"
            android:paddingStart="8dp"
            android:paddingEnd="8dp"
            android:autofillHints="password" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="*Password Capital Letters"
            android:textColor="#FFFFFF"
            android:textSize="10sp"
            android:textStyle="bold"
            android:paddingStart="15dp"/>

        <Space
            android:layout_width="match_parent"
            android:layout_height="20dp" />

        <Button
            android:id="@+id/signInButton"
            android:layout_width="220dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:background="@drawable/button_selector_maroon"
            android:text="@string/login"
            android:textColor="#FFFFFF" />

    </LinearLayout>
</LinearLayout>